--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "sass": "^1.60.0",
+    "swiper": "^9.2.4",
     "web-vitals": "^2.1.4",
     "zepto-modules": "^1.0.1"
   },
