--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "react-router-dom": "^6.11.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "react-wow": "^1.0.0",
     "sass": "^1.60.0",
     "swiper": "^9.2.4",
     "web-vitals": "^2.1.4",
+    "wow.js": "^1.2.2",
     "zepto-modules": "^1.0.1"
   },
   "scripts": {
