--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/lab": "^5.0.0-alpha.129",
+    "@mui/material": "^5.13.0",
+    "@mui/styled-engine-sc": "^5.12.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,6 +22,7 @@
     "react-scripts": "5.0.1",
     "react-wow": "^1.0.0",
     "sass": "^1.60.0",
+    "styled-components": "^5.3.10",
     "swiper": "^9.2.4",
     "web-vitals": "^2.1.4",
     "wow.js": "^1.2.2",
