--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@mui/lab": "^5.0.0-alpha.129",
     "@mui/material": "^5.13.0",
     "@mui/styled-engine-sc": "^5.12.0",
+    "@studio-freight/lenis": "^1.0.14",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "counterup": "^1.0.2",
+    "gsap": "^3.11.5",
     "imagemapster": "^1.5.4",
     "jquery": "^3.6.4",
     "jquery-mask-plugin": "^1.14.16",
@@ -24,6 +27,7 @@
     "react-scripts": "5.0.1",
     "react-wow": "^1.0.0",
     "sass": "^1.60.0",
+    "scrolltrigger": "^1.0.1",
     "styled-components": "^5.3.10",
     "swiper": "^9.2.4",
     "web-vitals": "^2.1.4",
