--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "animate.css": "^4.1.1",
     "counterup": "^1.0.2",
     "gsap": "^3.11.5",
     "imagemapster": "^1.5.4",
@@ -21,6 +22,7 @@
     "jquery-mask-plugin": "^1.14.16",
     "maphilight": "^1.4.2",
     "react": "^18.2.0",
+    "react-animate-on-scroll": "^2.1.7",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.0",
     "react-router-hash-link": "^2.4.3",
